--- a/references.bib
+++ b/references.bib
@@ -527,3 +527,23 @@ url = {https://www.maersk.com/stories/maersk-and-ibm-launch-digital-joint-ventur
 urldate = {2018-02-08},
 year = {2018}
 }
+
+
+@misc{Buterin2015,
+author = {Buterin, Vitalik},
+booktitle = {Etherum Blog},
+file = {:C$\backslash$:/Users/PedroCosta/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/c51882799c143bc2b1aa5a52900d377ec6e40fb6.html:html},
+title = {{On Public and Private Blockchains}},
+url = {https://blog.ethereum.org/2015/08/07/on-public-and-private-blockchains/},
+urldate = {2018-03-20},
+year = {2015}
+} 
+
+@misc{Andersen2018,
+author = {Andersen, Ole and Vogdrup-Schmidt, Louise},
+file = {:C$\backslash$:/Users/PedroCosta/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/8f228babbe8827d572f077307a770bef0c7dd0b4.html:html},
+title = {{Rivals reject blockchain solution from Maersk and IBM}},
+url = {https://shippingwatch.com/carriers/Container/article10602520.ece},
+year = {2018}
+}
+
