--- a/survey/survey1.tex
+++ b/survey/survey1.tex
@@ -42,7 +42,7 @@ The results of the survey are analyzed in this chapter. Each group features the 
 
 Data from the participants was inquired, including: role, industry, years of experience and company size (if  they worked in one at all).
 
-The data, as can be seen in figure \ref{fig:group1_graphics}, can be summarized in the following statements:
+The data, as can be seen in Figure \ref{fig:group1_graphics}, can be summarized in the following statements:
 
 \todo{fcorreia: "Figure 6.1" (capital F)}
 
