--- a/survey/survey2.tex
+++ b/survey/survey2.tex
@@ -12,7 +12,7 @@ This section features some questions that inquire about the respondent's knowled
 \label{fig:blockchain_knowledge}
 \end{figure}
 
-In figure \ref{fig:blockchain_knowledge}, it can be seen that most answers are in the middle of the scale, while both the extremes have few answers, which closely resemble a gaussian or normal distribution. 
+In Figure \ref{fig:blockchain_knowledge}, it can be seen that most answers are in the middle of the scale, while both the extremes have few answers, which closely resemble a gaussian or normal distribution. 
 
 Indeed, when calculated, the skew of this data is about -0,065104294, which is a very low number (the standard error was about 0,46) and close to 0. A normal distribution has a skew of 0, so this can be said to be a good approximation. Additional, it can be said that there is not much of a bias towards accepting or denying blockchain when answering other questions, either from knowing too much or too little, since the knowledge curve seems to be normal.
  
@@ -31,7 +31,7 @@ After inquiring about the blockchain knowledge of the respondents, some affirmat
 
 Independently, these affirmations don't hold an absolute value that can help ascertain if there is a need for a cryptocurrency in the case of supply chain. But together, the three affirmations lead to a higher degree of certainty.
 
-The first affirmation states that a blockchain, any at all, independently of the purpose or type, does indeed need a cryptocurrency. The second affirmation goes on a tangent from the first one, stating that maybe cryptocurrencies are only needed as an incentive, and otherwise could be not needed. The final affirmation is more generic in nature, and attempts to \textbf{completely separate the concept of blockchain and cryptocurrency}. The results for each affirmation can be found in figure \ref{fig:blockchain_crypto_opinions} and in table \ref{table:blockchain_crypto_opinions}.
+The first affirmation states that a blockchain, any at all, independently of the purpose or type, does indeed need a cryptocurrency. The second affirmation goes on a tangent from the first one, stating that maybe cryptocurrencies are only needed as an incentive, and otherwise could be not needed. The final affirmation is more generic in nature, and attempts to \textbf{completely separate the concept of blockchain and cryptocurrency}. The results for each affirmation can be found in Figure \ref{fig:blockchain_crypto_opinions} and in table \ref{table:blockchain_crypto_opinions}.
 
 \begin{figure}[h]
 \centering
