--- a/survey/surveyintro.tex
+++ b/survey/surveyintro.tex
@@ -120,11 +120,8 @@ The analysis of the answers is done through bar graphics (some with frequency po
 
 %%%%%%%%%%% TABLE END %%%%%%%%%%%%%%%%%%%%%
 
-
-%TODO
 To classify if the skew of the distribution is high or not, there is a measure that can be calculated, the skewness standard error, with the following formula: 
 $\sqrt\frac{6*N*(N-1)}{(N-2)*(N+1)*(N+3))}$, where $N = sample size$.
 
-For a sample size of 25, the Skewness Standard Error is 0,463683501
-.
+For a sample size of 25, the Skewness Standard Error is 0,463683501.
 %Extreme values indicate loooong tails;
